# mchart

./: .gitignore  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES_v0.2.0.md  pyproject.toml
docs/: API.md  v0.2.0_TODOS.md
examples/: compare_charts.py  fetch_billboard_200.py  fetch_billboard_hot100.py  list_all_charts.py  search_artist.py
mchart/: __init__.py  client.py  items.py  middlewares.py  models.py  pipelines.py  runner.py  settings.py
mchart/config/: __init__.py  base.py  providers.py
mchart/providers/: __init__.py  base.py  billboard.py  spotify.py
mchart/spiders/: billboard.py
tests/: __init__.py  conftest.py  test_billboard.py  test_client.py  test_models.py  test_spider.py
