[project]
name = "mchart"
version = "0.2.0"
description = "A unified Python library for fetching music chart data from multiple sources"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Yuze Xie", email = "xyzbrianx@gmail.com" }
]
keywords = ["music", "charts", "billboard", "spotify", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
lxml = ["lxml>=5.0.0"]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/mastaBriX/mchart"
Documentation = "https://github.com/mastaBriX/mchart#readme"
Repository = "https://github.com/mastaBriX/mchart"
Issues = "https://github.com/mastaBriX/mchart/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mchart"]
